package eapli.base.TeacherRegistration.domain;

public enum Role {
    ASSISTANT, REGENT;
}
