package eapli.base.sharedboard.domain;


public enum SharedBoardState {
    ARCHIVED, OPEN;
}
