package eapli.base.sharedboard.domain;

public enum TypeOfPost{
    IMAGE, TEXT;
}